@@ -127,6 +127,33 @@ cmd_part_run (urj_chain_t *chain, char *params[])
 }
 
 static void
+cmd_part_complete (urj_chain_t *chain, char ***matches, size_t *match_cnt,
+                   char * const *tokens, const char *text, size_t text_len,
+                   size_t token_point)
+{
+    int i;
+
+    if (token_point != 1)
+        return;
+
+    urj_completion_mayben_add_match (matches, match_cnt, text, text_len, "alias");
+
+    for (i = 0; i < chain->parts->len; ++i)
+    {
+        /* We assume you'll never have more than 15*10 parts */
+        char num[16];
+
+        sprintf (num, "%i", i);
+        urj_completion_mayben_add_match (matches, match_cnt, text,
+                                         text_len, num);
+
+        if (chain->parts->parts[i]->alias)
+            urj_completion_mayben_add_match (matches, match_cnt, text, text_len,
+                                             chain->parts->parts[i]->alias);
+    }
+}
+
+static void
 cmd_part_help (void)
 {
     urj_log (URJ_LOG_LEVEL_NORMAL,
@@ -141,5 +168,6 @@ const urj_cmd_t urj_cmd_part = {
     "part",
     N_("change active part for current JTAG chain"),
     cmd_part_help,
-    cmd_part_run
+    cmd_part_run,
+    cmd_part_complete,
 };
